Added temporary porfolio layout.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <title>Michael Logan Eppley</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
-<h1>Michael Logan Eppley</h1>
-<p>704-576-1612</p>
+<div class="jumbotron text-center">
+  <h1>Michael Logan Eppley</h1>
+  <p>Portfolio & Resume/p> 
+</div>
+  
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="well">
+        <p>Logan Eppley</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
